src/test/ui/traits/trait-alias/trait-alias-impl.stderr
error[E0404]: expected trait, found trait alias `DefaultAlias`
  --> $DIR/trait-alias-impl.rs:5:6
   |
LL | impl DefaultAlias for () {}
   |      ^^^^^^^^^^^^ not a trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0404`.
